# roboharness

./: .cirun.yml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  SKILL.md  STATUS.md  TODOS.md  pyproject.toml  showcase-repo-plan.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/pages/: g1-native.html  index.html  sonic.html
.github/workflows/: ci.yml  docker.yml  hf-space.yml  pages.yml  publish.yml  release.yml
.planning/lerobot-eval-plugin/: PLAN.md
agent-skill/roboharness-harness/: .generated-manifest.json  README.md  SKILL.md  contract.py  contract.snapshot.json  scope-brief-template.md
agent-skill/roboharness-harness/schemas/: generated-artifacts.schema.json  harness-contract.schema.json
agent-skill/roboharness-harness/stubs/: run-validation.py
assets/00/X26_Y22_Z13/: autonomous_report.json  snapshot_bundle.json
assets/00/X32_Y28_Z13/: autonomous_report.json  snapshot_bundle.json
assets/example_mujoco_grasp/: baseline_autonomous_report.json
blog/: harness-engineering-for-robotics.md  why-ai-coding-agents-dont-need-a-separate-vlm-for-robot-debugging.md
constraints/: demo_matrix.toml  grasp_default.yaml
docs/: ad-hackathon-2026-feishu-final.zh-CN.md  ad-hackathon-2026-feishu-full.zh-CN.md  ad-hackathon-2026-submission.zh-CN.md  ci-strategy.md  component-lifecycle-guide.md  context.en.md  context.zh-CN.md  development-workflow.md  ecosystem-strategy.md  harness-engineering-insights.md  p1-constraint-evaluator.md  roadmap-2026-q2.md  simulator-survey.en.md  simulator-survey.md  simulator-survey.zh-CN.md  sonic-inference-stacks.md  spike-newton-backend.md  spike-roboverse-metasim.md  todo.md
docs/academic/: conference-opportunities-2026.md  gsoc-2027-application.md
docs/adr/: 0002-post-hoc-semantic-snapshot-evidence.md
docs/agents/: ci-debugging.md  environments.md  testing.md
docs/community/: harn-app-submission.md  ros-discourse-post.md  ros2-mcp-discussion.md
docs/designs/: agent-visual-review-v1.md  mujoco-alarmed-grasp-loop-eng-review.md  mujoco-alarmed-grasp-loop-phase-2-plan-reviewed.md  mujoco-alarmed-grasp-loop-phase-2-plan.md  mujoco-alarmed-grasp-loop-sketch.html  mujoco-alarmed-grasp-loop.md  mujoco-grasp-devex-audit-20260415.md  mujoco-grasp-report-design-audit-20260415.md  unattended-refactor-harness-boomerang-review-20260420.md  unattended-refactor-harness-v1.md
docs/development/: ci-strategy.md  development-workflow.md
docs/funding/: anthropic-oss-application.md  robotics-factory-evaluation.md
docs/hackathon/2026-05-showcase/: TALK_STORYBOARD.zh-CN.md
docs/human/: README.md
docs/plans/: completed-maintenance-log.md  gr00t-dogfood-semantic-snapshot-evidence.md  gr00t-library-first-visual-lifecycle.md  refactor-reduce-entropy-repo-surface.md  unattended-refactor-harness-plan.md
docs/product/: p1-constraint-evaluator.md  roadmap-2026-q2.md  roadmap.md  sonic-inference-stacks.md
docs/research/: harness-engineering-insights.md  simulator-survey.en.md  spike-newton-backend.md  spike-roboverse-metasim.md
docs/research-checkpoints/: 2026-05.md  README.md
docs/strategy/: ecosystem-strategy.md  strategic-direction-review-2026-04.md
examples/: README.md  _mujoco_grasp_wedge.py  contrib_rerun_robotics_viz.py  g1_wbc_reach.py  grasp_task_storage.py  isaac_lab_integration.py  lerobot_eval.py  lerobot_eval_harness.py  lerobot_g1.py  lerobot_g1_native.py  mujoco_grasp.py  mujoco_rerun.py  quickstart_gymnasium.py  sonic_locomotion.py  sonic_tracking.py
examples/demos/g1/: cross_framework_report.py  lerobot_locomotion.py  lerobot_native.py  wbc_reach.py
examples/demos/mujoco/: fixture.py  grasp.py  rerun.py  task_storage.py  wedge.py
examples/demos/sonic/: locomotion.py  tracking.py
examples/integrations/isaac_lab/: integration.py
examples/integrations/lerobot/: eval_harness.py
examples/integrations/maniskill/: visual_debug.py
examples/integrations/rerun/: robotics_viz.py
examples/quickstart/: gymnasium_wrapper.py
hf-space/: README.md
scripts/: auto_label_issues.py  build-cirun-gpu-image.sh  gpu-dev-setup.sh  init-showcase-repo.py
src/roboharness/: __init__.py  _utils.py  cli.py  reporting.py  runner.py
src/roboharness/approval/: __init__.py  visual_review.py
src/roboharness/backends/: __init__.py  mujoco_meshcat.py  unitree_dds.py  visualizer.py
src/roboharness/contract/: __init__.py  generator.py  model.py
src/roboharness/controllers/: __init__.py  locomotion.py  wbc_ik.py
src/roboharness/core/: __init__.py  capture.py  checkpoint.py  controller.py  harness.py  lifecycle.py  protocol.py  rerun_logger.py
src/roboharness/evaluate/: __init__.py  assertions.py  batch.py  constraints.py  defaults.py  lerobot_env.py  lerobot_plugin.py  lerobot_policy_adapter.py  protocol.py  result.py
src/roboharness/evidence/: __init__.py  artifacts.py  proof_pack.py
src/robot_harness/: __init__.py
tests/: conftest.py  test_assertions.py  test_capture.py  test_checkpoint.py  test_cli.py  test_controller.py  test_design_review_pass_state_metadata.py  test_design_review_report_responsive.py  test_gpu_smoke.py  test_harness.py  test_history.py  test_isaac_lab_compat.py  test_isaac_lab_gpu.py  test_lerobot_env.py  test_lerobot_eval.py  test_lerobot_eval_harness.py  test_lerobot_eval_plugin.py  test_lerobot_g1_compat.py  test_lerobot_native_compat.py  test_lifecycle.py  test_locomotion.py  test_mcp_server.py  test_mcp_tools.py  test_mujoco_grasp_live_validation.py  test_mujoco_grasp_wedge.py  test_protocol.py  test_reporting.py  test_rerun_logger.py  test_runner.py  test_sonic_locomotion_example.py  test_sonic_tracking_example.py  test_storage.py  test_unitree_dds.py  test_utils.py  test_vector_env_adapter.py  test_visualizer.py  test_wrapper_edge_cases.py
tests/contract/: test_approval_evidence.py  test_demo_matrix.py  test_dockerfiles.py  test_project_harness_skill.py  test_release_truth.py
tests/unit/: test_package_imports.py
(+62 files in other folders)
