[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roboharness"
version = "0.1.1"
description = "A Visual Testing Harness for AI Coding Agents in Robot Simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MiaoDX", email = "miaodx@hotmail.com" },
    { name = "WLB", email = "wlb@floatinglife.ai" },
]
keywords = ["robotics", "simulation", "testing", "harness", "ai-agent", "mujoco", "visual-feedback"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0",
]
meshcat = [
    "mujoco>=3.0",
    "meshcat>=0.3.0",
]
maniskill = [
    "mani_skill>=3.0",
]
rerun = [
    "rerun-sdk>=0.18",
]
wbc = [
    "pin>=3.0",
    "pin-pink>=0.11",
    "qpsolvers[quadprog]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = [
    "roboharness[mujoco,meshcat,rerun,wbc,dev]",
]

[project.scripts]
roboharness = "roboharness.cli:main"

[project.urls]
Homepage = "https://github.com/MiaoDX/RobotHarness"
Repository = "https://github.com/MiaoDX/RobotHarness"
Issues = "https://github.com/MiaoDX/RobotHarness/issues"
Documentation = "https://github.com/MiaoDX/RobotHarness/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/roboharness"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PTH", "TCH", "RUF", "PIE"]
ignore = [
    "TC001",  # moving app imports to TYPE_CHECKING breaks runtime usage in this codebase
    "TC003",  # moving stdlib imports to TYPE_CHECKING breaks runtime usage in this codebase
]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=roboharness --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = [
    "src/roboharness/backends/mujoco_meshcat.py",
    "src/roboharness/backends/visualizer.py",
    "src/roboharness/controllers/wbc_ik.py",
    "src/roboharness/wrappers/gymnasium_wrapper.py",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "mujoco.*",
    "meshcat.*",
    "gymnasium.*",
    "gym.*",
    "PIL.*",
    "rerun_sdk.*",
    "rerun.*",
    "mani_skill.*",
    "pinocchio.*",
    "pink.*",
    "qpsolvers.*",
    "yaml.*",
]
ignore_missing_imports = true
